# 3D-Printing

./: .gitignore  README.md  pyproject.toml  requirements.txt
old/: test2.py
scripts/: basic_normal.py  functions.R  normal_correlated.py
scripts/old/: single_sided_dep_normal_normal.py  single_sided_ind_lognorm_lognorm.py  single_sided_ind_normal_normal.py  split_surface_mesh_creation.py  two_sided_experiment.py  two_sided_ind_normal_normal_lognorm_lognorm.py  two_sided_normal_dweibull.py
src/: main.py  meshgrid.ipynb  refactor_test.py  single_sided_ind_dweibull_genhyperbolic.py  single_sided_ind_normal_normal.py  test.ipynb  test.py  try_openstl.py  two_sided_ind_normal_normal_lognorm_lognorm.py
src/math_surfaces/: __init__.py
src/mesh/: __init__.py  surface.py
