[project]
name = "math_surfaces"
version = "0.0.02"
description = "A package to generate 3D printable mathematical surfaces"
readme = "README.md"
authors = [
    { name = "Dhruv Dole", email = "dhruv@ddole.net" }
]
requires-python = ">=3.12,<3.13" # open3d not available for python 3.13 yet
dependencies = [
    "numpy>=2.2.5",
    "open3d>=0.19.0",
    "scipy>=1.15.2",
]

packages = ["math_surfaces"]

[project.scripts]
math_surfaces = "math_surfaces:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
